--- a/index.html
+++ b/index.html
@@ -21,39 +21,8 @@
             background-color: lightblue;
         }
     </style>
-   <p class="paragraph-1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-
-    Aenean commodo ligula eget dolor. Aenean massa.
-
-    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-
-    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
-
-    Nulla consequat massa quis enim.
-
-    Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
-
-    In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
-
-    Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
-
-    Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
-
-    Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-
-    Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
-
-    Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.
-
-    Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
-
-    Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.
-
-    Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus.
-
-    Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.
-
-    Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</p>
+   <p class="paragraph-1">Online safety very important to maintain on the internet. Sure, you may have heard that the internet is a ‘dangerous place’, but have you ever wondered why? This website was made to instruct internet users why to stay safe, how to stay safe, and the consequences if online safety is not practiced. Some of the main dangers online are cybercriminals, malicious websites (viruses, unsafe content etc.), and invasion of privacy. Though anti-virus softwares can be useful and convenient, it is important not to be too lenient on them, as there are still ways to get in online danger. In order to stay safe from online threats, it is important to understand them, first. Viruses are created by the hackers for various reasons, such as stealing and selling personal information, online fraud, to gain popularity in a hacker community, and to access sensitive information. This can be dangerous, because an attacker can sell your personal information, impersonate you, and much more. Malicious websites are dangerous because they can lead to viruses, trick visitors into trusting their website, and give the hacker access to your device. This could have the same outcome has having a virus in your computer, since it can ruin your reputation, make your location and other private information exposed, and even lead to cyberbullying. Safety on social media is also just as important, because criminals can gain access to personal information, and give them an easier platform to impersonate you and ruin your reputation. Though these things may seem daunting at first, there are plenty of ways to stay safe, and keep your personal device and information protected.
+</p>
   <p class="paragraph-2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 
     Aenean commodo ligula eget dolor. Aenean massa.
