--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
  <head>
    <title>Stay Safe Online</title>
    <h1>Staying Safe Online</h1>
-  <button class="button-1"onclick="document.querySelector('.paragraph-1').scrollIntoView({ behavior: 'smooth' })">Why Safety Matters</button>
-  <button class="button-2"onclick="document.querySelector('.paragraph-2').scrollIntoView({ behavior: 'smooth' })">Virus/Threat Safety</button>
-  <button class="button-3"onclick="document.querySelector('.paragraph-3').scrollIntoView({ behavior: 'smooth' })">Internet Safety</button>
-  <button class="button-4"onclick="document.querySelector('.paragraph-4').scrollIntoView({ behavior: 'smooth' })">Social Media Safety</button>
+  <button class="button-1"onclick="document.querySelector('.header-1').scrollIntoView({ behavior: 'smooth' })">Why Safety Matters</button>
+  <button class="button-2"onclick="document.querySelector('.header-2').scrollIntoView({ behavior: 'smooth' })">Virus/Malware Safety</button>
+  <button class="button-3"onclick="document.querySelector('.header-3').scrollIntoView({ behavior: 'smooth' })">Internet/Social Media Safety</button>
+   <a href="https://www.mybib.com/b/mgwab9">
+     <button class="button-3">Sources</button>
+     </a>
 </head>
 
   <body>
@@ -21,105 +23,13 @@
             background-color: lightblue;
         }
     </style>
-   <p class="paragraph-1">Online safety is very important to maintain on the internet. Sure, you may have heard that the internet is a ‘dangerous place’, but have you ever wondered why? This website was made to instruct internet users why to stay safe, how to stay safe, and the consequences if online safety is not practiced. Some of the main dangers online are cybercriminals, malicious websites (viruses, unsafe content etc.), and invasion of privacy. Though anti-virus softwares can be useful and convenient, it is important not to be too lenient on them, as there are still ways to get in online danger. In order to stay safe from online threats, it is important to understand them, first. Viruses are created by the hackers for various reasons, such as stealing and selling personal information, online fraud, to gain popularity in a hacker community, and to access sensitive information. This can be dangerous, because an attacker can sell your personal information, impersonate you, and much more. Malicious websites are dangerous because they can lead to viruses, trick visitors into trusting their website, and give the hacker access to your device. This could have the same outcome has having a virus in your computer, since it can ruin your reputation, make your location and other private information exposed, and even lead to cyberbullying. Safety on social media is also just as important, because criminals can gain access to personal information, and give them an easier platform to impersonate you and ruin your reputation. Though these things may seem daunting at first, there are plenty of ways to stay safe, and keep your personal device and information protected.
-</p>
-  <p class="paragraph-2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-
-    Aenean commodo ligula eget dolor. Aenean massa.
-
-    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-
-    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
-
-    Nulla consequat massa quis enim.
-
-    Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
-
-    In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
-
-    Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
-
-    Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
-
-    Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-
-    Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
-
-    Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.
-
-    Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
-
-    Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.
-
-    Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus.
-
-    Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.
-
-    Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</p>
-  <p class="paragraph-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-
-    Aenean commodo ligula eget dolor. Aenean massa.
-
-    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-
-    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
-
-    Nulla consequat massa quis enim.
-
-    Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
-
-    In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
-
-    Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
-
-    Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
-
-    Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-
-    Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
-
-    Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.
-
-    Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
-
-    Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.
-
-    Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus.
-
-    Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.
-
-    Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</p>
-  <p class="paragraph-4">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-
-  Aenean commodo ligula eget dolor. Aenean massa.
-
-  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-
-  Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
-
-  Nulla consequat massa quis enim.
-
-  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
-
-  In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
-
-  Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
-
-  Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
-
-  Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-
-  Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
-
-  Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.
-
-  Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
-
-  Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.
-
-  Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus.
-
-  Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.
-
-  Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</p>
+   <h4 class= "header-1">Why Safety Matters</h4> 
+   <p class="paragraph-1">Online safety very important to maintain on the internet. Sure, you may have heard that the internet is a ‘dangerous place’, but have you ever wondered why? This website was made to instruct internet users why to stay safe, how to stay safe, and the consequences if online safety is not practiced. Some of the main dangers online are cybercriminals, malicious websites (viruses, unsafe content, etc.), and invasion of privacy. Though anti-virus softwares can be useful and convenient, it is important not to be too lenient on them, as there are still ways to get into online danger. In order to stay safe from online threats, it is important to understand them, first. Viruses are created by the hackers for various reasons, such as stealing and selling personal information, online fraud, to gain popularity in a hacker community, and to access sensitive information. This can be dangerous, because an attacker can sell your personal information, impersonate you, and much more. Malicious websites are dangerous because they can lead to viruses, trick visitors into trusting their website, and give the hacker access to your device. This could have the same outcome has having a virus in your computer, since it can ruin your reputation, make your location and other private information exposed, and even lead to cyberbullying. Safety on social media is also just as important, because criminals can gain access to personal information, and give them an easier platform to impersonate you and ruin your reputation. Though these things may seem daunting at first, there are plenty of ways to stay safe, and keep your personal device and information protected.</p> 
+  
+  <h4 class="header-2">Virus/Malware Safety</h4>
+   <p class="paragraph-2">
+  There are many different types of viruses and ways your system can get infected. Some common one’s are a Trojan Virus, Browser Hijacker, and Resident Virus.Each one of these viruses have the intent to get into your system and cause damage within it. A Trojan virus is a program that makes you think you can trust it, but can actually damage system files, steal information, and even get access to your computer using a backdoor. These can be difficult to recognize, though, because they can be hidden within convincing software to make itself seem unharmful. An easy way to prevent a trojan is to install an effective antivirus. It is also important not to download or click on any suspicious files and links sent to you, and only download applications if you know they are completely trustworthy. Overall, use your common sense while navigating and downloading online. A resident virus is a type of malware that infects your computer’s RAM. This can cause your system to get infected, and cause everything that runs on your memory to be in danger. This may also cause your computer to run slower. To avoid this virus, don’t download and open links from unknown sources. Enable automatic software updates for your device, and don’t allow unauthorized access to it, either. A browser hijacker’s intention is to change your search engine’s settings, and even redirect it to unwanted sites. These websites are often malicious, and can contain links and advertisements which can give ad revenue to the cyber-criminal. To prevent this virus, keep the most current version on operating and browser updates. Avoid clicking on suspicious links and downloads, and don’t run unknown programs in your device. These viruses obviously are very harmful, and are all obtained in similar ways. Though there are plenty more viruses with different intentions, most of them can be prevented if the user takes the right precautions. Some tips to keep while navigating online are to not open unknown links and suspicious downloads, keep your eyes peeled for malicious software attempting to disguise as a trusted software, and download an effective anti-virus, which can normally detect viruses in you system. Staying safe from viruses requires plenty of common sense and vigilance from the user, because try usually try to trick their way into your system. To tell if a virus is already infecting your device, run a full system scan, restore your computer to an older version before the virus was installed, go into safe mode, install an antivirus, and activating safe mode on your device can also be useful. </p>
+    
+     <h4 class="header-3">Internet/Social Media Safety</h4>
+  <p class="paragraph-3">Social Media is a dangerous place in terms of not knowing who one is talking to. It is a platform where users can talk to strangers, who may have various different intentions. On social media, it is important to be aware of cyberbullying and cybercriminals. A cyberbully’s intention is to use technology and social media platforms to threaten, endanger, embarress, and overall bully their victim. A cybercriminal’s goal is to abuse social networks for theft, fraud, and misinformation. To prevent cyberbullying, think about the outcome of you posting something. If your post can possibly cause bullying and includes personal information, its best not to post it. Always be skeptical talking to others online, as they may be a cybercriminal hoping to get you to trust them. If you feel you are being threatened or bullied, make sure you report and block them, which can cause them to stop bullying you, and even potentially stop them from harming others.  Limiting your privacy settings can prevent criminals from using your personal information against you. Also, never click on a link that you know you cant trust. These links can be a virus, steal your identity, and even put your personal information in harm’s way. A cybercriminal posting someone else’s personal information is known as doxing. It is done by stealing other people’s private details, such as your real name, passwords, and IP address, and posting or threatening to post them online. To prevent this, you may use a VPN or proxy, which can change your IP address to fool a hacker, or act like a middleman between you  and your internet provider, making you harder to trace. These can be very useful in terms of keeping your internet and privacy protected from cyber criminals and hackers. Make your passwords strong, and hard to guess. The trick to making a strong passwords is to use a combination of lower and uppercase letters, and special characters such as numbers and symbols. You can also turn on two factor authentication to make the process harder for hackers trying to login to your accounts and steal your information. Keep your passwords private, because criminals can use the against you to access your accounts. Always be aware of bullies and criminals hoping to threaten you, and put your privacy at risk, because criminals will always try to find ways to manipulate and trick people online for their own use. If your personal information has already been compromised, reset your passwords, check your account activity, and try out identity protection theft services. Much like in the real world, do not trust strangers online, and stay safe.
   </body>  
